ui changes, content changes, manual.html added

--- a/manual.html
+++ b/manual.html
@@ -8,12 +8,9 @@
         <meta charset="utf-8">
         <title>schallblick/dev/os</title>
     </head>
+    <body>
         <h1></h1>
-        <h2>[Welcome to Schallblick OS V0.1]</h2>
-        <h2>[This is a public test release]</h2>
-        <h2>[Conditions and Terms apply]</h2>
-        <p><a href="https://github.com/schallblick">[/home/sb/github]</a></p>
-        <p><a href="mailto:rodaam@protonmail.ch">[home/sb/mail]</a></p>
+        <p>[Schallblick OS Manual]</V0></V0></p>
         <script src="scripts/main.js"></script>
     </body>
     <footer>
